# dagashi

./: .gitignore  README.md  entitlements.plist  package.json  pnpm-lock.yaml
.superpowers/brainstorm/404-1775828660/: .server-info  hybrid-example.html  keystroke-comparison.html  pixel-art-concept.html  side-by-side-v2.html  side-by-side.html
assets/: export-icon.html  icon-draft.html
daemon/: Cargo.toml
daemon/src/: main.rs
dagashi-common/: Cargo.toml
dagashi-common/src/: lib.rs
docs/: dagashi-island-spec.md
island/: Package.swift
island/Sources/DagashiIsland/: AppModel.swift  DagashiIslandApp.swift  FileWatcher.swift  Info.plist  IslandConstants.swift  NotchPanel.swift  NotchShape.swift  OverlayController.swift  PullData.swift  WeatherService.swift
island/Sources/DagashiIsland/Views/: CollapsedView.swift  ExpandedView.swift  IslandView.swift
island/Sources/DagashiIsland/Views/Components/: CheerPixels.swift  PixelPerson.swift  PixelRoof.swift  PixelSky.swift  WeatherParticles.swift
scripts/: dev.sh  generate_gifs.py  install.sh  rebuild.sh  restart.sh  start.sh  stop.sh
src/: app.js  index.html  style.css  widget.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anime_db.rs  config.rs  gacha.rs  giphy.rs  image_pipeline.rs  ipfs.rs  jikan.rs  keylogger.rs  klipy.rs  llm.rs  main.rs  stats.rs  storage.rs  tenor.rs  wiki.rs
