[package]
name = "dagashi"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
image = "0.25"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
device_query = "2"
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
